--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup Xcode
       uses: actions/setup-xcode@v2
       with:
-        xcode-version: '12.x' # Adjust version as needed
+        xcode-version: '14.3.1' # Adjust version as needed
 
     - name: Install Dependencies
       run: |
