--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Setup Xcode
-      uses: actions/setup-xcode@v2
+      uses: actions/setup-xcode@14.3.1
       with:
         xcode-version: '14.3.1' # Adjust version as needed
 
